# ishell

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/CWDHandler/: CWDHandler.cpp  CWDHandler.hpp
src/CommandHandler/: CommandHandler.cpp  CommandHandler.hpp
src/ConfigHandler/: ConfigHandler.cpp  ConfigHandler.hpp
src/EnvHandler/: EnvHandler.cpp  EnvHandler.hpp
src/HistoryHandler/: HistoryHandler.cpp  HistoryHandler.hpp
src/LineEditor/: LineEditor.cpp  LineEditor.hpp
src/RCHandler/: RCHandler.cpp  RCHandler.hpp
